<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/homeBtnPagina2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startscreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
<<<<<<< HEAD
        android:layout_marginBottom="36dp"
        android:text="drone coord."
=======
        android:text="@string/drone_cd"
>>>>>>> 64f2c1a0d8e1b3d9b73e95e14c68de93cf57a60b
        app:layout_constraintBottom_toTopOf="@+id/textView14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
<<<<<<< HEAD
        android:layout_marginBottom="52dp"
        android:text="home coord."
        app:layout_constraintBottom_toTopOf="@+id/timer"
=======
        android:text="@string/home_cd"
        app:layout_constraintBottom_toTopOf="@+id/videoView"
>>>>>>> 64f2c1a0d8e1b3d9b73e95e14c68de93cf57a60b
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/button4"
        android:layout_width="106dp"
        android:layout_height="41dp"
<<<<<<< HEAD
        android:layout_marginTop="16dp"
        android:text="set Home"
=======
        android:text="@string/set_home"
>>>>>>> 64f2c1a0d8e1b3d9b73e95e14c68de93cf57a60b
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextureView
        android:id="@+id/video_previewer_surface"
        android:layout_width="413dp"
        android:layout_height="218dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="56dp"
        app:layout_constraintBottom_toBottomOf="@+id/homeBtnPagina2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        app:layout_constraintVertical_bias="0.094" />

    <Button
        android:id="@+id/btn_capture"
        android:layout_width="133dp"
        android:layout_height="47dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:text="Capture"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_shoot_photo_mode"
        app:layout_constraintTop_toBottomOf="@+id/btn_record"
        app:layout_constraintVertical_bias="0.302" />

    <ToggleButton
        android:id="@+id/btn_record"
        android:layout_width="127dp"
        android:layout_height="45dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="552dp"
        android:layout_weight="1"
        android:checked="false"
        android:text="Start Record"
        android:textOff="Start Record"
        android:textOn="Stop Record"
        android:textSize="12dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_record_video_mode"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_shoot_photo_mode"
        android:layout_width="157dp"
        android:layout_height="49dp"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="60dp"
        android:layout_weight="1"
        android:text="Shoot Photo Mode"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/homeBtnPagina2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_record_video_mode" />

    <Button
        android:id="@+id/btn_record_video_mode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="552dp"
        android:layout_marginEnd="52dp"
        android:layout_weight="1"
        android:text="Record Video Mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/video_previewer_surface"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.414" />

</androidx.constraintlayout.widget.ConstraintLayout>